测试flux parallel